<resources>
    <string name="app_name">TransformersBattle</string>

    <string name="transformer_menu_action_add">Add transformer</string>
    <string name="transformer_menu_action_battle">Start a battle</string>

    <string name="transformer_dialog_cancel">Cancel</string>
    <string name="transformer_dialog_save">Save</string>
    <string name="transformer_dialog_ok">OK</string>

    <string name="transformer_item_name">Name:</string>
    <string name="transformer_item_team">Team:</string>
    <string name="transformer_item_team_autobots">Autobots</string>
    <string name="transformer_item_team_decepticons">Decepticons</string>
    <string name="transformer_item_overall_rating">Overall Rating:</string>
    <string name="transformer_item_strength">Strength:</string>
    <string name="transformer_item_intelligence">Intelligence:</string>
    <string name="transformer_item_speed">Speed:</string>
    <string name="transformer_item_endurance">Endurance:</string>
    <string name="transformer_item_rank">Rank:</string>
    <string name="transformer_item_courage">Courage:</string>
    <string name="transformer_item_firepower">Firepower:</string>
    <string name="transformer_item_skill">Skill:</string>

    <string name="transformers_battle_start">Wage a battle!</string>
    <plurals name="transformers_battle_results_battle_count">
        <item quantity="one">1 battle</item>
        <item quantity="other">%d battles</item>
    </plurals>
    <string name="transformers_battle_results_battle_winner">Winning team (%1$s): %2$s</string>
    <string name="transformers_battle_results_battle_loser">Survivors from the losing team (%1$s): %2$s</string>
</resources>