<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.CreateOrEditTransformerFragment" >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/create_or_edit_save_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="Save"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_or_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/transformer_item_name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/create_or_edit_team"
                android:checkedButton="@+id/create_or_edit_team_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/create_or_edit_team_autobots"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/transformer_item_team_autobots"/>
                <RadioButton
                    android:id="@+id/create_or_edit_team_decepticons"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/transformer_item_team_decepticons"/>
            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transformer_item_strength"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/create_or_edit_strength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="1"
                android:valueTo="10" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transformer_item_intelligence"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/create_or_edit_intelligence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="1"
                android:valueTo="10" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transformer_item_speed"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/create_or_edit_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="1"
                android:valueTo="10" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transformer_item_endurance"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/create_or_edit_endurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="1"
                android:valueTo="10" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transformer_item_rank"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/create_or_edit_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="1"
                android:valueTo="10" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transformer_item_courage"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/create_or_edit_courage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="1"
                android:valueTo="10" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transformer_item_firepower"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/create_or_edit_firepower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="1"
                android:valueTo="10" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transformer_item_skill"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/create_or_edit_skill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="1"
                android:valueTo="10" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>