<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    android:layout_margin="6dp"
    android:background="@android:color/holo_blue_dark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgcar"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="0.5" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_margin="2dp">

            <TextView
                android:id="@+id/transformer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/transformer_overall_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transformer_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/transformer_item_overall_rating"
                />

            <TextView
                android:id="@+id/transformer_overall_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_below="@+id/transformer_name"
                android:layout_toEndOf="@+id/transformer_overall_rating_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="212" />

            <TextView
                android:id="@+id/transformer_strength_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transformer_overall_rating_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/transformer_item_strength"
                />

            <TextView
                android:id="@+id/transformer_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_below="@+id/transformer_overall_rating_label"
                android:layout_toEndOf="@+id/transformer_overall_rating_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="212" />

            <TextView
                android:id="@+id/transformer_intelligence_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transformer_strength_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/transformer_item_intelligence"
                />

            <TextView
                android:id="@+id/transformer_intelligence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_below="@+id/transformer_strength_label"
                android:layout_toEndOf="@+id/transformer_overall_rating_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="212" />

            <TextView
                android:id="@+id/transformer_speed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transformer_intelligence_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/transformer_item_speed"
                />

            <TextView
                android:id="@+id/transformer_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_below="@+id/transformer_intelligence_label"
                android:layout_toEndOf="@+id/transformer_overall_rating_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="212" />

            <TextView
                android:id="@+id/transformer_endurance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transformer_speed_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/transformer_item_endurance"
                />

            <TextView
                android:id="@+id/transformer_endurance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_below="@+id/transformer_speed_label"
                android:layout_toEndOf="@+id/transformer_overall_rating_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="212" />

            <TextView
                android:id="@+id/transformer_firepower_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transformer_endurance_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/transformer_item_firepower"
                />

            <TextView
                android:id="@+id/transformer_firepower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_below="@+id/transformer_endurance_label"
                android:layout_toEndOf="@+id/transformer_overall_rating_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="212" />

        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>